--- a/beautyChuSpring/src/main/webapp/view/common/footer.html
+++ b/beautyChuSpring/src/main/webapp/view/common/footer.html
@@ -2,37 +2,28 @@
         <!-- upside -->
         <div class="upside">
           <!-- about -->
-          <div class="the-galleria widget">
+          <div class="the-beautychu widget">
             <div class="inner">
               <h2>ABOUT</h2>
               <ul>
-                <li class="m1"><a href="/web/about_1.jsp">WEST &amp; EAST</a></li>
-                <li class="m2"><a href="/web/about_2.jsp">HISTORY</a></li>
-                <li class="m3"><a href="/web/about_3.jsp">DESIGN COLLABORATION</a></li>
+                <li class="m1"><a href="#">Q &amp; A</a></li>
+                <li class="m2"><a href="#">Admin</a></li>
+                <li class="m3"><a href="#">Mobile version</a></li>
               </ul>
             </div>
           </div><!-- //about -->
-          <!-- sns -->
-          <div class="gift-n-card widget">
-            <div class="inner">
-              <h2>FOLLOW US</h2>
-              <ul>
-                <li class="m1"><a href="https://www.facebook.com/galleria.luxury" target="_blank" title="facebook 새창열림">FACEBOOK</a></li>
-                <li class="m2"><a href="https://twitter.com/Galleria_Luxury" target="_blank" title="twitter 새창열림">TWITTER</a></li>
-                <li class="m3"><a href="http://blogdegalleria.tistory.com/" target="_blank" title="blog 새창열림">BLOG</a></li>
-              </ul>
-            </div>
-          </div><!-- //sns -->
           <!-- etc -->
           <div class="etc widget">
             <ul class="etc-menu">
-              <li class="m1"><a href="/web/app.jsp">html5</a></li>
-              <li class="m2"><a href="http://branch.galleria.co.kr/index.jsp" target="_blank" title="새창열림">css3</a></li>
-              <li class="m3"><a href="http://culture.galleria.co.kr/" target="_blank" title="새창열림">spring</a></li>
-              <li class="m4"><a href="http://wedding.galleria.co.kr" target="_blank" title="새창열림">ajax</a></li>
-              <li class="m5"><a href="http://card.galleria.co.kr/" target="_blank" title="새창열림">node.js</a></li>
-              <li class="m6"><a href="http://www.galleria.co.kr/mallmain/initMallMain.do" target="_blank" title="새창열림">myBatis</a></li>
-              <li class="m7"><a href="http://www.gourmet494.com/main/" target="_blank" title="새창열림">jQuery</a></li>
+              <li class="m1"><a href="#">HTML5</a></li>
+              <li class="m2"><a href="#" target="_blank" title="새창열림">CSS3</a></li>
+              <li class="m3"><a href="#" target="_blank" title="새창열림">Javascript</a></li>
+              <li class="m4"><a href="#" target="_blank" title="새창열림">jQuery</a></li>
+              <li class="m5"><a href="#" target="_blank" title="새창열림">AJAX</a></li>
+              <li class="m6"><a href="#" target="_blank" title="새창열림">node.js</a></li>
+              <li class="m7"><a href="#" target="_blank" title="새창열림">spring</a></li>
+              <li class="m8"><a href="#" target="_blank" title="새창열림">MariaDB</a></li>
+              <li class="m9"><a href="#" target="_blank" title="새창열림">MyBatis</a></li>
             </ul>
           </div><!-- //etc -->
           <div class="clear"></div>
@@ -41,23 +32,6 @@
         <div class="downside">
           <!-- site-infos -->
           <div class="site-infos">
-            <ul class="footer-menu">
-              <li class="m1"><a href="http://www.hanwhagalleria.co.kr/" target="_blank" title="새창열림">회사소개</a></li>
-              <li class="m2"><a href="/web/member_my_terms.jsp">개인정보취급(처리)방침</a></li>
-              <li class="m3"><a href="/web/member_terms.jsp">이용약관</a></li>
-              <li class="m4"><a href="http://www.hanwhagalleria.co.kr/location/index.jsp" target="blank" title="새창열림">입점안내</a></li>
-              <li class="m5"><a href="javascript:;" onclick="window.open('/web/pop_movie_info.html','m6','width=560, height=700, scrollbars=yes')" title="새창열림">영상정보처리기기운영 관리방침</a></li>
-              <li class="m6"><a href="javascript:;" onclick="window.open('/web/pop_email_no.html','e6','width=550, height=500')" title="새창열림">이메일수집금지</a></li>
-              <li class="m7">
-                <a href="#사회적책임">사회적책임</a>
-                <ul>
-                  <li class="ms1"><a href="http://www.hanwhagalleria.co.kr/ethics/index.jsp" target="_blank" title="새창열림">윤리경영</a></li>
-                  <li class="ms2"><a href="http://www.hanwhagalleria.co.kr/fair/index.jsp" target="_blank" title="새창열림">공정거래자율준수 </a></li>
-                  <li class="ms3"><a href="http://www.hanwhagalleria.co.kr/responsibility/environment/main.jsp" target="_blank" title="새창열림">환경경영 </a></li>
-                  <li class="ms4"><a href="http://www.hanwhagalleria.co.kr/responsibility/contribute/main.jsp" target="_blank" title="새창열림">사회공헌활동</a></li>
-                </ul>
-              </li>
-            </ul>
             <div class="clear"></div>
             <!-- company-info -->
             <div class="company-info">
@@ -66,25 +40,16 @@
                 <span class="registcode">사업자등록번호 : 123123123123</span>
                 <span class="tel">전화 : 02-410-7114</span>
               </p>
-              <a href="mailto:tiggerhyun@gmail.com" class="email">mail</a>
+              <a href="mailto:tiggerhyun@gmail.com" class="email">beautychu@gmail.com</a>
             </div><!-- company-info -->
             <div class="copy">
               Copyright© 2015 <strong>by AppChu</strong>. CO. LTD, ALL RIGHTS RESERVED.
             </div>
           </div><!-- site-infos -->
 
-          <!-- family-sites -->
           <div class="family-sites toggle-menu js-control">
-            <a href="#familysites" class="btn-fs">FAMILY SITES</a>
-            <ul class="site-list toggle-list" style="display: none;">
-              <li><a href="http://www.hanwha.co.kr/index.jsp" target="_blank" title="새창열림">ㅎ</a></li>
-              <li><a href="http://ir.timeworld.co.kr/index.jsp" target="_blank" title="새창열림">ㅎㅎ</a></li>
-              <li><a href="http://www.hwrc.co.kr/index.asp" target="_blank" title="새창열림">ㅎㅎㅎ</a></li>
-              <li><a href="http://www.63.co.kr/home/63CITY/main.do" target="_blank" title="새창열림">ㅎㅎㅎㅎ</a></li>
-              <li><a href="https://www.hoteltheplaza.com/eng/index.jsp" target="_blank" title="새창열림">ㅎㅎㅎ</a></li>
-              <li><a href="http://www.hanwhaeagles.co.kr" target="_blank" title="새창열림">ㅎㅎㅎ</a></li>
-            </ul>
-          </div><!-- family-sites -->
+            <a href="#familysites" class="btn-fs">By. AppChu</a>
+          </div>
             
 
           <div class="clear"></div>
