회원정보 수정 파일 업로드...하...ㅠ

--- a/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
@@ -435,6 +435,7 @@ var imsiEmail;
 				success : function(data) {
 					console.log(data);
 					console.log(data.result);
+					alert("파일 보내짐");
 				},
 				error : function(error) {
 					alert("요청 처리 중 오류가 발생하였습니다.");
