--- a/beautyChuSpring/src/main/webapp/view/jy_personalinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/jy_personalinfo.html
@@ -128,121 +128,104 @@ button.trigger { background: black; color: #fff; border: none; }
 
 					<form name='frm' class='form-horizontal jy-mdf-info' role='form'
 						method='post' enctype="multipart/form-data">
-
+						
+						<table id="personal-info-mdf">
 						<!-- 이메일 -->
-						<div class='jy-form-group'>
-							<label class='jy-control-label' for='inputEmail1'> <strong
-								class='jy-mdf-email'>이메일</strong>
-							</label>
-							<div class='jy-email-mdf-total'>
-								<div class='jy-email-mdf-div'>
-									<div class='jy-input-mdf-email'>
-										<input name='mdf-user_email' class='jy-form-control-modify'
-											id='jy-mdf-user_email' type='email' maxlength='100' value=""
-											placeholder='' disabled>
-										<!-- 이메일입력 -->
-									</div>
-									<!-- /.row -->
-								</div>
-
-							</div>
-						</div>
-						<!-- 이메일 -->
+							<tr class='mdf-data-tr'>
+								<td class='mdf-name'>이메일</td>
+								<td class='mdf-content'>
+											<input name='mdf-user_email' class='jy-form-control-modify'
+												id='jy-mdf-user_email' type='email' maxlength='100' value=""
+												placeholder='' disabled>
+											<!-- 이메일입력 -->
+								</td>
+							</tr>
+							<!-- 이메일 -->
+	
 
 						<!-- 닉네임 -->
-						<div class='jy-form-group'>
-							<label class='jy-control-label' for='inputNickname1'> <strong
-								class='jy-mdf-nick'>닉네임</strong>
-							</label>
-							<div class='jy-input-mdf-nickname'>
-								<input name='mdf-user_nickname' class='jy-form-control-modify'
-									id='jy-mdf-user_nickname' type='text' maxlength='50'
-									placeholder=' '>
-							</div>
-						</div>
-						<!-- 닉네임 -->
+							<tr class='mdf-data-tr'>
+								<td class='mdf-name'>닉네임</td>
+								<td class='mdf-content'>
+									<input name='mdf-user_nickname' class='jy-form-control-modify'
+										id='jy-mdf-user_nickname' type='text' maxlength='50'
+										placeholder=' '>
+								</td>
+							</tr>
+							<!-- 닉네임 -->
 
 						<!-- 프사 등록 -->
-						<div class='jy-form-group'>
-							<label class='jy-control-label' for='inputPhoto2'> <strong
-								class='jy-mdf-photo'>프로필 사진 </strong>
-							</label>
-							<div class='jy-input-mdf-photo'>
-
-								<input name='mdf-photo' class='jy-form-control-modify'
-									id='jy-mdf-photo' type='file'
-									onchange="realPath(this);" />
-								<!-- realPath(this); -->
-								<img id='jyPreviewPhoto' class='jyPreviewPhoto' src="" alt=""
-									title='preview image' />
-							</div>
-						</div>
-						<!-- 프사 등록 -->
+							<tr class='mdf-data-tr'>
+								<td class='mdf-name'>프로필 사진</td>
+								<td class='mdf-content'>
+									<input name='mdf-photo[]' class='jy-form-control-modify'
+										id='jy-mdf-photo' type='file' onchange="realPath(this);" multiple />
+									<!-- realPath(this); -->
+									<!-- <div id='jyPreviewPhoto' class='jyPreviewPhoto'></div> -->
+									<img id='jyPreviewPhoto' class='jyPreviewPhoto' src="" alt=""
+										title='preview-image' />
+								</td>
+							</tr>
+							<!-- 프사 등록 -->
 
 						<!-- 주소 -->
-						<div class='jy-form-group'>
-							<label class='jy-control-label' for='inputAddr'> <strong
-								class='jy-mdf-addr'>주소</strong>
-							</label>
-							<div class='jy-input-mdf-addr'>
-								<input name='mdf-user_addr' class='jy-form-control-modify'
-									id='jy-mdf-user_addr' type='text' maxlength='50'
-									placeholder=' '>
-							</div>
-						</div>
-						<!-- 주소 -->
+							<tr class='mdf-data-tr'>
+								<td class='mdf-name'>주소</td>
+								<td class='mdf-content'>
+									<input name='mdf-user_addr' class='jy-form-control-modify'
+										id='jy-mdf-user_addr' type='text' maxlength='50'
+										placeholder=' '>
+								</td>
+							</tr>
+							<!-- 주소 -->
 
 						<!-- 핸드폰 번호 -->
-						<div class='jy-form-group'>
-							<label class='jy-control-label' for='inputPhone'> <strong
-								class='jy-mdf-phone'>휴대폰</strong>
-							</label>
-							<div class='jy-input-mdf-phone'>
-								<select id="jy-mdf-user_phone1">
-									<option value="">::선택::</option>
-									<option value="010">010</option>
-									<option value="011">011</option>
-									<option value="016">016</option>
-									<option value="017">017</option>
-									<option value="019">019</option>
-								</select> <input name='mdf-user_phone' class='jy-form-control-phone'
-									id='jy-mdf-user_phone2' type='text' size="4"
-									onkeypress="JYonlyNumber();" /> <input name='mdf-user_phone'
-									class='jy-form-control-phone' id='jy-mdf-user_phone3'
-									type='text' size="4" />
-							</div>
-						</div>
-						<!-- 핸드폰 번호 -->
+							<tr class='mdf-data-tr'>
+								<td class='mdf-name'>휴대폰</td>
+								<td class='mdf-content'>
+									<select id="jy-mdf-user_phone1">
+										<option value="">::선택::</option>
+										<option value="010">010</option>
+										<option value="011">011</option>
+										<option value="016">016</option>
+										<option value="017">017</option>
+										<option value="019">019</option>
+									</select> 
+									<input name='mdf-user_phone' class='jy-form-control-phone'
+										id='jy-mdf-user_phone2' type='text' size="4"
+										onkeypress="JYonlyNumber();" /> 
+									<input name='mdf-user_phone' class='jy-form-control-phone' 
+										id='jy-mdf-user_phone3' type='text' size="4" />
+								</td>
+							</tr>
+							<!-- 핸드폰 번호 -->
 
 						<!-- 비밀번호 -->
-						<div class='jy-form-group'>
-							<label class='jy-control-label' for='inputPassword1'> <strong
-								class='jy-mdf-pw'>비밀번호</strong>
-							</label>
-							<div class='jy-input-mdf-user-pw'>
-								<input name='mdf-user_pw' class='jy-form-control-modify'
-									id='jy-mdf-user_pw' type='password' maxlength='20'
-									placeholder='4~20자로 입력해주세요.'>
-							</div>
-						</div>
-						<!-- 비밀번호 -->
+							<tr class='mdf-data-tr'>
+								<td class='mdf-name'>비밀번호</td>
+								<td class='mdf-content'>
+									<input name='mdf-user_pw' class='jy-form-control-modify'
+										id='jy-mdf-user_pw' type='password' maxlength='20'
+										placeholder='4~20자로 입력해주세요.'>
+								</td>
+							</tr>
+							<!-- 비밀번호 -->
 
 						<!-- 비밀번호확인 -->
-						<div class='jy-form-group'>
-							<label class='jy-control-label' for='inputPassword2'> <strong
-								class='jy-mdf-pwr'>비밀번호 확인 </strong>
-							</label>
-							<div class='jy-input-mdf-confirm-pw'>
-								<input name='mdf-confirm_pw' class='jy-form-control-modify'
-									id='jy-mdf-confirm_pw' type='password' maxlength='20'
-									placeholder='비밀번호를 재입력 해주세요.'>
-							</div>
-						</div>
-						<!-- 비밀번호확인 -->
+							<tr class='mdf-data-tr'>
+								<td class='mdf-name'>비밀번호 확인</td>
+								<td class='mdf-content'>
+									<input name='mdf-confirm_pw' class='jy-form-control-modify'
+										id='jy-mdf-confirm_pw' type='password' maxlength='20'
+										placeholder='비밀번호를 재입력 해주세요.'>
+								</td>
+							</tr>
+							<!-- 비밀번호확인 -->
 
-						<!-- 비밀번호 일치 체크  -->
-						<div id="jy-mdf-pw-check" style="height: 10px;"></div>
-						<!-- 비밀번호 일치 체크  -->
+							<!-- 비밀번호 일치 체크  -->
+							<tr class='mdf-data-tr' id="jy-mdf-pw-check" style="height: 10px;"></tr>
+							<!-- 비밀번호 일치 체크  -->
+							</table>
 
 						<div class='jy-pinfo-btn-area'>
 							<button id='jy-btn-pinfo-fin' class='jy-btn-pinfo-fin'
@@ -265,13 +248,13 @@ button.trigger { background: black; color: #fff; border: none; }
 			</div>
 		</section>
 
-	<footer id="footer">
-		<!-- footer 건들지 말긔! -->
-	</footer>
 	
 	</div>
 	<!-- .wrap-chu -->
 
+	<footer id="footer">
+		<!-- footer 건들지 말긔! -->
+	</footer>
 
 
 	
