리스트 새단장

--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -45,7 +45,7 @@
 
 <!-- 지도 -->
 <script type="text/javascript"
-	src="//apis.daum.net/maps/maps3.js?apikey=d68325ce80aa99b09337e375aa77d969&libraries=services"></script>
+	src="//apis.daum.net/maps/maps3.js?apikey=e5353ee43c5a9ea624372eb7cb8e99b1646087a2&libraries=services"></script>
 
 <style type="text/css">
 /*  댓글 스타일 */
@@ -80,7 +80,10 @@ height: 50px;
 	display: none;
 }
 
-
+.kh-shopListName {
+	font: normal;
+	font-size: 20px;
+}
 
 
 /* 스타일 적용 공간! */
@@ -93,7 +96,7 @@ height: 50px;
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
-	margin-top: 100px; 
+	margin-top: 110px; 
 }
 
 html {
@@ -143,12 +146,13 @@ body {
 .yun-box {
 	position: relative;
 	width: 280px;
-	height: 410px;
+	height: 350px;
  	float: left; 
 	margin: 5px;
 	font-size: 40px;
-	border-radius: 10px;
 	overflow: hidden;
+	border: 1px #dcdcdc solid;
+	margin-bottom : 30px;
 }
 
 .yun-edge {
@@ -159,27 +163,31 @@ body {
 
 .yun-boximage {
 	width: 280px;
-	height: 410px;
+	height: 260px;
 }
 
 .kh-basic {
 	position: absolute;
-	bottom: 0px;
+	bottom: 30px;
 	width: 280px;
-	text-align: center;
-	height: 100px;
-	background-color: rgba(0,0,0,1);
-	color: white;
+	height: 40px;
+	background-color: rgba(255,255,255,1);
+	color: black;
 	border-radius: 0px 0px 10px 10px;
-	font-size: 30px;
+	font-size: 16px;
+	font: nomal;
+	line-height: normal;
+	padding-left: 7px;
 }
 .kh-basic h2 {
-	color: white;
+	text-align : left;
+	color: black;
 	margin-top: 15px;
+	margin-left: 10px;
 }
 
 .kh-detail h2 {
-	color: white;
+	color: black;
 	margin-top: 10px;
 	font-size: 30px;
 }
@@ -200,24 +208,23 @@ body {
 
 
 .kh-detail {
+	display: none;
 	position: absolute;
-	bottom: 0px;
+	bottom: 100px;
 	width: 280px;
 	text-align: center;
 	height: 140px;
-	background-color: rgba(0,0,0,1);
-	color: white;
-	border-radius: 0px 0px 10px 10px;
+	z-index: 10;
 }
 
 .kh-gradation {
 	position: absolute;
 	top: 0px;
 	width: 280px;
-	height: 270px;
-	background-color: rgba(0,0,0,0.5);
+	height: 260px;
+	background-color: rgba(255, 255, 255, 0.85);
 	display: none;
-	border-radius: 10px 10px 0px 0px;
+
 }
 
 .yun-shop-button .yun-shoppricelist {
@@ -226,6 +233,11 @@ body {
 
 .get-coupon {
 	float: right;
+}
+
+kh-shopListName{
+	font-size: 30px;
+
 }
 
 /* ============================================================== */
@@ -396,8 +408,10 @@ body {
 /* yun-shopdetail.html css */
 #yun-shopdetailcontainer {
 	width: 1150px;
-	height: 600px;
+	height: 590px;
 	background-color: white;
+	border-top: 1px #c5c5c5 solid;
+	border-bottom: 1px #c5c5c5 solid;
 }
 
 .yun-shopcontainerdiv {
@@ -474,7 +488,7 @@ body {
 
 
 	<div id="wrap-chu" class="wrap-chu">
-
+	<DIV style="text-align:center;font-size:50px; height:50px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 20px;width: 1127px;">SHOP</DIV>
 		<div class="yun-container">
 		
 		<!-- 샵 테이블 삽입부 -->
@@ -598,8 +612,8 @@ body {
 				});
 				$('.yun-edge').after('<div id=changediv class="yun-info-bg"><div id=yun-div1 class=yun-div><div></div>');
 				loadShop($(this).attr('data-email'));
-				loadReview($(this).attr('data-email'));
 				$('.yun-info-bg').slideDown();
+				loadReview($(this).attr('data-email'));
 				setTimeout(function () {  $('html, body').animate({scrollTop:$('.yun-info-bg').position().top-75}, 'slow');  });
 				pagebtnnum=2;
 			}
@@ -687,23 +701,19 @@ body {
  		loadMap($(this).attr('data-email'));
  		});
 			
+			/* 하버 */
+	$(document).on('mouseenter', '.yun-box',  function(){
 			
-		$( document ).ready(function() {
-			$(".kh-detail").css("display", "none");
-		$(".yun-box").hover(
-				  function () {
-					  $(this).find(".kh-basic").css("display", "none");
-					  $(this).find(".kh-detail").css("display", "block");
-					  $(this).find(".kh-gradation").css("display", "block");
-				  },
-				  function () {
-					  $(this).find(".kh-basic").css("display", "block");
-					  $(this).find(".kh-detail").css("display", "none");
-					  $(this).find(".kh-gradation").css("display", "none");
-				  }
-				);
-		});
-		$( document ).ready(function() {
+			
+			  $(this).find(".kh-detail").css("display", "block");
+			  $(this).find(".kh-gradation").css("display", "block");
+			  
+		}).on('mouseleave', '.yun-box', function() {
+		  $(this).find(".kh-detail").css("display", "none");
+		  $(this).find(".kh-gradation").css("display", "none");
+
+	});
+/* 		$( document ).ready(function() {
 			$(".kh-smalldetail").css("display", "none");
 		$(".yun-shopstyle").hover(
 				  function () {
@@ -717,7 +727,7 @@ body {
 					  $(this).find(".kh-gradation").css("display", "none");
 				  }
 				);
-		});
+		}); */
 		
 		$('div').on("click",".get-coupon",function(){
 			event.stopPropagation();
@@ -752,7 +762,12 @@ body {
  						    	  var template = Handlebars.compile(source);
  						    	  var html = template(data);
  					    		  $('#yun-div'+pagebtnnum+' '+'#yun-shopphotolist').html(html);	  
- 						      }); 
+ 						      });
+ 			 			      $.get('templates/jy_commenttemp.html', function(source){
+ 			 			    	  var template = Handlebars.compile(source);
+ 			 			    	  var html = template(data);
+ 			 			    	  $('#yun-shopcomment').html(html);
+ 			 			      });
  						    });
  				 	} 
 				
@@ -788,8 +803,6 @@ body {
 				
 	</script>
 	
-	<div id="map" style="width: 100%; height: 350px;"></div>
-
 
 </body>
 </html>
