--- a/beautyChuSpring/src/main/webapp/view/templates/kh-shop-table.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/kh-shop-table.html
@@ -3,8 +3,8 @@
 			<div class="yun-box" data-email="{{email}}">
 				<img class="yun-boximage" src="{{shopPhotoUrl}}">
 					<div class="kh-basic">
-						<h2>{{shopName}}</h2>
-						<h2>{{shopAddr}}</h2>
+						<h1 id="kh-shopListName"style=" font-size: 20px;">{{shopName}}</h1>
+						<p style="font: icon; font-size: 13px;">{{shopAddr}}</p>
 						<div class="starrr"></div>
 					</div>
 					<div class="kh-detail">
