--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
@@ -134,14 +134,14 @@
 	<div style=" height: 50px;">
 		<div id=yun-buttondiv>
 			<img class='yun-back' src="../images/yun-shopdetail/back-icon.png">
-			<img class='yun-exit' src="../images/yun-shopdetail/exit-icon.png">
+			<!-- <img class='yun-exit' src="../images/yun-shopdetail/exit-icon.png"> -->
 		</div>
 
 		<div class="yun-pricetitle">
 		<h1>Price List</h1>
 		</div>
 		<div class=buttondiv>
-			<div class="ui button get-coupon">Get Coupon</div>
+			<!-- <div class="ui button get-coupon">Get Coupon</div> -->
 		</div>
 	</div>	
 		
