리스트 헤더 수정

--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -169,8 +169,8 @@ body {
 .kh-basic {
 	position: absolute;
 	bottom: 30px;
-	width: 280px;
-	height: 40px;
+	width: 265px;
+	height: 60px;
 	background-color: rgba(255,255,255,1);
 	color: black;
 	border-radius: 0px 0px 10px 10px;
@@ -475,9 +475,9 @@ kh-shopListName{
 </head>
 <body class="home">
 
-	<jy_header>
+	<header>
 		<!-- header 건들지 말긔! -->
-	</jy_header>
+	</header>
 
 
 	<!--	<div id=changediv >
@@ -524,7 +524,7 @@ kh-shopListName{
 
 	<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
-		$('jy_header').load('common/jy_header.html'); 
+		$('header').load('common/header.html'); 
 		$('footer').load('common/footer.html');
 
 		
