--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -496,9 +496,9 @@ border-radius: 20px;
 </head>
 <body class="home">
 
-	<jy_header>
+	<header>
 		<!-- header 건들지 말긔! -->
-	</jy_header>
+	</header>
 
 
 	<!--	<div id=changediv >
@@ -542,7 +542,7 @@ border-radius: 20px;
 
 	<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
-		$('jy_header').load('common/jy_header.html'); 
+		$('header').load('common/header.html'); 
 		$('footer').load('common/footer.html');
 
 		
