헤더 충돌 수정

--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -3,45 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <title>Beauty Chu~♥</title>
+<!-- 마페 -->
 
-<link rel="shortcut icon" href="../images/favicon.ico"
-	type="image/x-icon">
+<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-<!-- <link rel="stylesheet" type="text/css" href="../css/common_chu2.css"> -->
+
+<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+
+<script type="text/javascript" src="../js/modernizr.min.js"></script>
+<script type="text/javascript" src="../js/jquery.easing.js"></script>
+<script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script>
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
+
+
+<!-- /마페 -->
 <link rel="stylesheet" href="../css/resources/starrr.css">
 <link rel="stylesheet"
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../css/yun/button.min.css">
+<link rel="stylesheet" href="../css/yun/button.min.css"> 
 
 <!-- 댓글 -->	
-<link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
-	media="all" />
+ <link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
+	media="all" /> 
 
 <!-- 공통 스크립트 -->
-<!-- <link rel="stylesheet" type="text/css" href="../css/basic.css"/>
-<script type="text/javascript" src="../js/modernizr.min.js"></script> -->
-<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-<!-- <script type="text/javascript" src="../js/jquery.easing.js"></script>
-<script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script> -->
 <script type="text/javascript" src="../js/common.js"></script>
-<!-- <script type="text/javascript" src="../js/motion.js"></script> 
-<script type="text/javascript" src="../js/jquery.motio.min.js"></script> -->
 
 	<script>
 			window.intro = 'yes';
 	</script>
 		
-	<!-- page가 home일 경우에만 로드하는 js -->
-<!-- 	<script type="text/javascript" src="../js/jquery.touchSwipe.min.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/jquery.event.drag-2.2.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/jquery.event.drag.live-2.2.js"></script> -->
-	<!-- <script type="text/javascript" src="../js/home.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/home.show-window.js"></script> -->
 <!-- 공통 스크립트 -->
-
-<script type='text/javascript' src='http://code.jquery.com/jquery-1.7.2.js'></script>
-<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
+<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script> 
 
 <!-- 지도 -->
 <script type="text/javascript"
@@ -116,6 +110,7 @@ body {
 	height: 100%;
 	display: table;
 	width: 100%;
+	background-color: white;
 }
 
 #footer {
@@ -473,8 +468,8 @@ kh-shopListName{
 </style>
 
 </head>
-<body class="home">
-
+<body class="home" >
+<div style="background-color: white;">
 	<header>
 		<!-- header 건들지 말긔! -->
 	</header>
@@ -517,10 +512,10 @@ kh-shopListName{
 	<footer>
 		<!-- footer 건들지 말긔! -->
 	</footer>
-
+<!-- 
 	<script type="text/javascript"
 		src='../js/resources/jquery-2.1.1.min.js'></script>
-	<script src="../js/resources/starrr.js"></script>
+	<script src="../js/resources/starrr.js"></script> -->
 
 	<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
@@ -802,7 +797,7 @@ kh-shopListName{
 				
 				
 	</script>
-	
+	</div>
 
 </body>
 </html>
