--- a/beautyChuSpring/src/main/webapp/view/jy_mycoupon.html
+++ b/beautyChuSpring/src/main/webapp/view/jy_mycoupon.html
@@ -41,7 +41,7 @@
 
 /* personalinfo CSS */
 .personalinfo { width: 1000px; margin: auto; }
-.pinfo-form { border: 3px solid gray; border-radius: 10px; padding: 40px; margin-top: 100px; }
+.pinfo-form {border: 3px solid gray; border-radius: 10px; padding: 40px; margin-top: 100px; margin-bottom: 100px;}
 .pinfo-data { text-align: center; }
 .title-pinfo { text-align: center; font-size: 40px; margin-bottom: 40px; }
 .pinfo-form-control { width: 600px; }
@@ -74,7 +74,7 @@ button.trigger { background: black; color: #fff; border: none }
 
 </head>
 
-<body class="home">
+<body>
 	<header> <!-- header 건들지 말긔! --> </header>
 
 
