--- a/beautyChuSpring/src/main/webapp/view/jy_personalinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/jy_personalinfo.html
@@ -39,15 +39,14 @@
 	padding: 5px; margin-left: 10px; margin-top: 10px }
 .mypage-title { text-align: center; font-size: 1.5em; }
 .mypage-uname { text-align: center; font-size: 12px; }
-.mypage-munu-list {
-	margin-left: 20px;
-}
+.mypage-munu-list {margin-left: 20px;}
 
 /* personalinfo CSS */
 .personalinfo { width: 1000px; margin: auto; }
 .pinfo-form {border: 3px solid gray; border-radius: 10px; padding: 40px; margin-top: 100px; margin-bottom: 100px;}
 .title-pinfo {text-align: center; font-size: 40px; margin-bottom: 40px; }
 .pinfo-form-control {width: 600px;}
+
 .pinfo-subtitle {font-weight: bold; text-align: left; padding-left: 70px; margin: 10px 0px;}
 .btn-qna-submit {margin: 20px; width: 610px;}
 .pinfo-email {height: 20px; font-size: 12px; margin-bottom: 30px;}
@@ -92,7 +91,7 @@ button.trigger {background: black; color: #fff; border: none; }
 		<div class="mypage-menu">
 			<hr style="display: block;">
 			<h2 class="mypage-title">MyPage</h2>
-			<p class="mypage-uname">user name 님</p>
+			<!-- <p class="mypage-uname">user name 님</p> -->
 			<hr style="display: block;">
 			<ul class="mypage-munu-list">
 				<li class="mp-infomdf" id="mp-infomdf"><a
@@ -148,9 +147,12 @@ button.trigger {background: black; color: #fff; border: none; }
 								<td class='mdf-content'>
 									<input name='mdf-photo' class='jy-form-control-modify'
 										id='jy-mdf-photo' type='file' onchange="realPath(this);" multiple />
-									<!-- realPath(this); -->
+								</td>
+							</tr>
+							<tr class='mdf-data-tr'>			
+								<td class='mdf-name'></td>
+								<td>		
 									<!-- <div id='jyPreviewPhoto' class='jyPreviewPhoto'></div> -->
-									<br>
 									<img id='jyPreviewPhoto' class='jyPreviewPhoto' src="" alt=""
 										title='preview-image' />
 								</td>
@@ -212,7 +214,10 @@ button.trigger {background: black; color: #fff; border: none; }
 							<!-- 비밀번호확인 -->
 
 							<!-- 비밀번호 일치 체크  -->
-							<tr class='mdf-data-tr' id="jy-mdf-pw-check" style="height: 10px;"></tr>
+							<tr class='mdf-data-tr' style="height: 10px;">
+							<td></td>
+							<td class='mdf-content' id="jy-mdf-pw-check" style="font-size: 12px;"></td>
+							</tr>
 							<!-- 비밀번호 일치 체크  -->
 							</table>
 
