--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -78,7 +78,9 @@ height: 50px;
 	font: normal;
 	font-size: 20px;
 }
-
+.write-comment-form {
+	display: none;
+}
 
 /* 스타일 적용 공간! */
 
@@ -90,7 +92,7 @@ height: 50px;
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
-	margin-top: 110px; 
+	margin-top: 30px; 
 }
 
 html {
@@ -728,6 +730,12 @@ kh-shopListName{
 			event.stopPropagation();
 			alert("쿠폰이 발급되었습니다!");
 		});
+		
+		
+		
+		
+		
+		
 		
 		/* 샵 리스트 로드 */
 		
